--- a/index.html
+++ b/index.html
@@ -218,7 +218,8 @@
         topAreas: topAreas
       };
 
-      fetch("https://script.google.com/macros/s/AKfycbzyiw_GIlg3vGyupZoIbOAXunIr6SVNi2UGgKjVvMhlrtvG9UDugub91-7uShRNFO3h/exec", {
+      fetch(fetch("https://script.google.com/macros/s/AKfycbz6CbGbTJ3wErlVLb6Px2Q-gBB60w9uSYpg6Jl6MQD6odWN_lTCAetGe7M5_YUqwKUr/exec", {
+", {
         method: "POST",
         body: JSON.stringify(payload),
         headers: { "Content-Type": "application/json" }
