--- a/index.html
+++ b/index.html
@@ -1,23 +1,21 @@
-
 <!DOCTYPE html>
 <html lang="en">
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
   <title>OSO AI Readiness Audit</title>
-  <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@400;600&display=swap" rel="stylesheet">
   <style>
     body {
-      font-family: 'Poppins', sans-serif;
-      background: #f4f7f8;
-      color: #0C2340;
+      font-family: 'Segoe UI', sans-serif;
       margin: 0;
       padding: 2rem;
+      background: #f4f7f8;
+      color: #0C2340;
+      text-align: center;
     }
     .container {
       max-width: 700px;
-      margin: 0 auto;
-      text-align: center;
+      margin: auto;
     }
     .osoBtn {
       background-color: #0C2340;
@@ -62,6 +60,7 @@
        You’ll get a custom AI Action Map + video — free.
     </p>
     <button id="osoAuditBtn" class="osoBtn">🧠 Start the Audit</button>
+
     <div id="osoAuditWidget">
       <div id="osoQuestionContainer"></div>
       <div id="osoProgressBar"></div>
