--- a/index.html
+++ b/index.html
@@ -1,3 +1,4 @@
+
 <!DOCTYPE html>
 <html lang="en">
 <head>
@@ -68,37 +69,12 @@
   </div>
 
   <script>
-  const sections = {
-  operations: [
-    "Do you manually assign tasks or reminders?",
-    "Do you chase updates or status checks?",
-    "Are SOPs followed inconsistently?",
-    "Do you check multiple platforms for updates?",
-    "Would saving 5–10 hours/week help you lead better?"
-  ],
-  sales: [
-    "Do leads go more than 5 minutes without a follow-up?",
-    "Are you manually qualifying or tagging prospects?",
-    "Is one person (maybe you) chasing every deal?",
-    "Are cold leads sitting untouched?",
-    "Would instant, consistent outreach help you close more?"
-  ],
-  marketing: [
-    "Are you creating content from scratch every week?",
-    "Do campaigns fail to adjust based on performance?",
-    "Are posts or emails inconsistent — or MIA?",
-    "Are DMs/comments left hanging?",
-    "Would personalized, always-on outreach help you grow?"
-  ],
-  strategy: [
-    "Do your tools talk to each other (CRM, calendar, email)?",
-    "Do you switch tabs 100x/day to get things done?",
-    "Are you missing a live view of ops or ROI?",
-    "Want to grow without hiring more people?",
-    "Would a system that thinks like you change the game?"
-  ]
-};
-
+    const sections = {
+      operations: ["Do you manually assign tasks or reminders?", "Do you chase updates or status checks?", "Are SOPs followed inconsistently?", "Do you check multiple platforms for updates?", "Would saving 5–10 hours/week help you lead better?"],
+      sales: ["Do leads go more than 5 minutes without a follow-up?", "Are you manually qualifying or tagging prospects?", "Is one person (maybe you) chasing every deal?", "Are cold leads sitting untouched?", "Would instant, consistent outreach help you close more?"],
+      marketing: ["Are you creating content from scratch every week?", "Do campaigns fail to adjust based on performance?", "Are posts or emails inconsistent — or MIA?", "Are DMs/comments left hanging?", "Would personalized, always-on outreach help you grow?"],
+      strategy: ["Do your tools talk to each other (CRM, calendar, email)?", "Do you switch tabs 100x/day to get things done?", "Are you missing a live view of ops or ROI?", "Want to grow without hiring more people?", "Would a system that thinks like you change the game?"]
+    };
 
     let score = { operations: 0, sales: 0, marketing: 0, strategy: 0 };
     let currentSection = "operations";
@@ -118,7 +94,7 @@
     function updateProgressBar() {
       const total = Object.values(sections).flat().length;
       const answered = Object.values(score).reduce((a, b) => a + b, 0);
-      document.getElementById("osoProgressBar").style.width = `${(answered / total) * 100}%`;
+      document.getElementById("osoProgressBar").style.width = \`\${(answered / total) * 100}%\`;
     }
 
     function getNextSection(current) {
@@ -170,10 +146,14 @@
         topAreas: topAreas
       };
 
-      fetch("https://script.google.com/macros/s/AKfycbz6CbGbTJ3wErlVLb6Px2Q-gBB60w9uSYpg6Jl6MQD6odWN_lTCAetGe7M5_YUqwKUr/exec", {
+      fetch("https://script.google.com/macros/s/AKfycbzkYrCzDaTbkHy3Z9iXlgtMkrGmyUk9fUqA02nyZC_ld6Sl6OtPpLyrdfplx_rceK6A/exec", {
         method: "POST",
         body: JSON.stringify(payload),
         headers: { "Content-Type": "application/json" }
+      })
+      .then(response => {
+        if (!response.ok) throw new Error("Network response was not ok");
+        return response.text();
       })
       .then(() => {
         document.getElementById("osoQuestionContainer").innerHTML = `
@@ -183,6 +163,14 @@
             <button class="osoBtn">📅 Book Your Free Audit</button>
           </a>
         `;
+      })
+      .catch(error => {
+        document.getElementById("osoQuestionContainer").innerHTML = `
+          <h3>⚠️ Something went wrong</h3>
+          <p>We couldn’t submit your audit. Please try again or contact support.</p>
+          <pre style="color: red;">${error.message}</pre>
+        `;
+        console.error("Submission error:", error);
       });
     }
 
