--- a/index.html
+++ b/index.html
@@ -13,10 +13,12 @@
       color: #0C2340;
       text-align: center;
     }
+
     .container {
       max-width: 700px;
       margin: auto;
     }
+
     .osoBtn {
       background-color: #0C2340;
       color: white;
@@ -27,9 +29,11 @@
       cursor: pointer;
       margin: 1rem 0;
     }
+
     .osoBtn:hover {
       background-color: #3A8F74;
     }
+
     input {
       padding: 10px;
       margin: 10px 0;
@@ -39,10 +43,12 @@
       border-radius: 6px;
       font-size: 1rem;
     }
+
     #osoAuditWidget {
       display: none;
       margin-top: 2rem;
     }
+
     #osoProgressBar {
       height: 6px;
       background: #3A8F74;
@@ -56,8 +62,9 @@
 <body>
   <div class="container">
     <h1>⚡ OSO AI Readiness Audit</h1>
-    <p>This 5-minute self-assessment helps you spot where AI Agents can save time, boost revenue, and clean up operations.<br>
-       You’ll get a custom AI Action Map + video — free.
+    <p>
+      This 5-minute self-assessment helps you spot where AI Agents can save time, boost revenue, and clean up operations.<br>
+      You’ll get a custom AI Action Map + video — free.
     </p>
     <button id="osoAuditBtn" class="osoBtn">🧠 Start the Audit</button>
 
@@ -69,10 +76,34 @@
 
   <script>
     const sections = {
-      operations: ["Do you manually assign tasks or reminders?", "Do you chase updates or status checks?", "Are SOPs followed inconsistently?", "Do you check multiple platforms for updates?", "Would saving 5–10 hours/week help you lead better?"],
-      sales: ["Do leads go more than 5 minutes without a follow-up?", "Are you manually qualifying or tagging prospects?", "Is one person (maybe you) chasing every deal?", "Are cold leads sitting untouched?", "Would instant, consistent outreach help you close more?"],
-      marketing: ["Are you creating content from scratch every week?", "Do campaigns fail to adjust based on performance?", "Are posts or emails inconsistent — or MIA?", "Are DMs/comments left hanging?", "Would personalized, always-on outreach help you grow?"],
-      strategy: ["Do your tools talk to each other (CRM, calendar, email)?", "Do you switch tabs 100x/day to get things done?", "Are you missing a live view of ops or ROI?", "Want to grow without hiring more people?", "Would a system that thinks like you change the game?"]
+      operations: [
+        "Do you manually assign tasks or reminders?",
+        "Do you chase updates or status checks?",
+        "Are SOPs followed inconsistently?",
+        "Do you check multiple platforms for updates?",
+        "Would saving 5–10 hours/week help you lead better?"
+      ],
+      sales: [
+        "Do leads go more than 5 minutes without a follow-up?",
+        "Are you manually qualifying or tagging prospects?",
+        "Is one person (maybe you) chasing every deal?",
+        "Are cold leads sitting untouched?",
+        "Would instant, consistent outreach help you close more?"
+      ],
+      marketing: [
+        "Are you creating content from scratch every week?",
+        "Do campaigns fail to adjust based on performance?",
+        "Are posts or emails inconsistent — or MIA?",
+        "Are DMs/comments left hanging?",
+        "Would personalized, always-on outreach help you grow?"
+      ],
+      strategy: [
+        "Do your tools talk to each other (CRM, calendar, email)?",
+        "Do you switch tabs 100x/day to get things done?",
+        "Are you missing a live view of ops or ROI?",
+        "Want to grow without hiring more people?",
+        "Would a system that thinks like you change the game?"
+      ]
     };
 
     let score = { operations: 0, sales: 0, marketing: 0, strategy: 0 };
@@ -173,7 +204,7 @@
       });
     }
 
-    document.addEventListener("DOMContentLoaded", function () {
+    document.addEventListener("DOMContentLoaded", () => {
       const btn = document.getElementById("osoAuditBtn");
       btn.onclick = () => {
         document.getElementById("osoAuditWidget").style.display = "block";
